--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ ic-cdk = "0.6.8"
 lazy_static = "1.2"
 sqlite-vfs = { package = "sqlite-vfs-ic", version = "0.2" }
 rusqlite = { package = "rusqlite-ic", version = "0.28", features = ["bundled", "serde_json"]}
+
+[features]
+backup =[]
